--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Beneficiaries"
         tools:targetApi="31">
+
         <activity
-            android:name=".MainActivity"
-            android:exported="true"
+            android:name=".ui.activity.MainActivity"
+            android:exported="false"
             android:label="@string/app_name">
+        </activity>
+
+        <activity
+            android:name=".ui.activity.SplashActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
